# GenQuick

./: .gitignore  LICENSE  README.md  README_EN.md
genquick-script/: convert_icons.py
genquick-script/icons/: icon.icns
quickui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
quickui/src/: App.vue  main.ts
quickui/src-tauri/: Cargo.toml  tauri.conf.json
quickui/src-tauri/capabilities/: default.json
quickui/src-tauri/src/: ai.rs  clipboard.rs  commands.rs  config.rs  keyboard.rs  lib.rs  main.rs  settings.rs  tray.rs
quickui/src-tauri/src/commands/: ai.rs  clipboard.rs
quickui/src/components/: ChartPanel.vue  ChatSession.vue  QuickMenu.vue  ResultPanel.vue  WindowControls.vue
quickui/src/components/ImageEditor/: ImageEditor.vue  index.ts
quickui/src/components/common/: ConfirmDialog.vue  Toast.vue
quickui/src/components/icons/: SvgIcon.vue
quickui/src/composables/: useAI.ts  useToast.ts
quickui/src/constants/: icons.ts  systemPrompts.ts
quickui/src/router/: index.ts
quickui/src/stores/: config.ts  prompts.ts  settings.ts
quickui/src/styles/: base.css  chart-panel.scss  chat-session.scss  custom-prompts.css  prompt-scoring.css  prompt-tuning.css  result-panel.scss  settings-about.css  settings-activation.css  settings-api.css  settings-base.css  settings-form.css  settings-general.css  settings-pricing.css  settings-prompts.css  variables.css
quickui/src/types/: index.ts
quickui/src/utils/: chartRenderer.ts  imageProcessor.ts
quickui/src/views/: MainView.vue  SettingsView.vue
(+18 files in other folders)
